Fixing shell command execution.